src/patterns/form-elements/_form-elements.scss
/*********************************/
/* BEGIN Pattern: form-elements  */
/*********************************/

.dpl-form {

    // By default, conditional content is hidden
    div.conditional-content-select, div.conditional-content-radio, {
        border-color:      rgb(75, 76, 75);
        border-left-style: solid;
        border-left-width: 5px;
        display: none;
        margin-top: 10px;
        padding: 15px 15px 0 15px;
    }

    div.conditional-content-radio {
        margin-top: -20px;
    }

    .select-box p {
        margin-bottom: 5px;
    }

    input:not([type=submit]):not([type=file]):not([type=checkbox]):not([type=radio]).form-control, select.form-control {
    	font-size: 18px;
        height: 46px;
    }

    .help-block {
    	margin-top: 0;
    }

    .radio-button, .checkbox-box {
        p {
            margin-bottom: 0;
        }

        ul {
            list-style: none;
            padding: 0;
        }

        ul li {
            position: relative;
            width: 100%;
        }

        ul li input[type=radio], ul li input[type=checkbox] {
            border: 0;
            clip: rect(0 0 0 0);
            height: 1px;
            margin: -1px;
            overflow: hidden;
            padding: 0;
            position: absolute;
            width: 1px;
        }

        ul li label {
            cursor: pointer;
            height: 30px;
            margin: 10px auto;
            padding: 5px 25px 25px 60px;
            position: relative;
            -webkit-transition: all 0.25s linear;
                    transition: all 0.25s linear;
            z-index: 9;
        }

        ul li .check {
            background-color: white;
            border: 3px solid black;
            border-radius: 100%;
            height: 25px;
            position: absolute;
            top:  15px;
            left: 20px;
            width: 25px;
            -webkit-transition: border .25s linear;
                    transition: border .25s linear;
            z-index: 5;
        }

        ul li .check i::before, ul li .check::before {
            border-radius: 100%;
            content: '';
            height: 13px;
            margin: auto;
            position: absolute;
            top:  3px;
            left: 3px;
            width: 13px;
            -webkit-transition: background 0.25s linear;
                    transition: background 0.25s linear;
        }

        ul li input[type=radio]:checked ~ .check::before {
            background: black;
        }

        ul li input[type=radio]:focus ~ .check, ul li input[type=checkbox]:focus ~ .check {
            box-shadow: 0 0 0 4px $sta-yellow;
        }
    }

    .inline ul li {
        display: inline-block;
        width: auto;
    }

    .checkbox-box {
        ul li .check {
            border-radius: 0;
        }

        ul li input[type=checkbox]:checked ~ .check i::before {
            color: black;
            content: '\f00c';
            top: 1px;
            left: 1px;
        }
    }
}

.ui-datepicker .ui-state-default.ui-state-active {
    border: 1px solid #00539b;
    background: #00539b;
}

.ui-datepicker .ui-datepicker-today a {
    border: 1px solid #7e7e7e;
    background: #e0e0e0;
    color: #454545;
}

.ui-datepicker .ui-datepicker-today .ui-state-default.ui-state-active {
    color: #fff;
}

/*********************************/
/* END Pattern: form-elements    */
/*********************************/

